tests/cli/snapshots/cli__check__replica_lag_none.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.submit"  unused-key
  --> ./messages/en.json:1:1
  = note: ("Submit")


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
