tests/cli/snapshots/cli__check__replica_lag_with_usages.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - missing
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.cancel"  replica-lag
  --> ./messages/en.json:1:0
  = note: ("Cancel") missing in: zh
  = used: ./src/app.tsx:9:22


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
