tests/cli/snapshots/cli__check__schema_factory_missing_key_reported.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Form.titleRequired"  [missing-key]
  --> ./src/form.tsx:3:16
  |
3 | 
  | ^
  = note: from createFormSchema (./src/schemas.ts)


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
