tests/cli/snapshots/cli__check__source_root_override.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - hardcoded
    - "--source-root"
    - custom-src
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Messages directory 'custom-src/messages' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
