tests/cli/snapshots/cli__check__subcommand_orphan.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - orphan
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.submit"  unused-key
  --> ./messages/en.json:1:0
  = note: ("Submit")

warning: "Common.oldKey"  orphan-key
  --> ./messages/zh.json:1:0
  = note: in zh ("旧的按钮")


✘ 2 problems (0 errors, 2 warnings)

----- stderr -----
