tests/cli/snapshots/cli__check__subcommand_type_mismatch.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - type-mismatch
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Page.items"  type-mismatch
  --> ./messages/en.json:1:0
  = note: (array) mismatched in: zh (string) at ./messages/zh.json:1
  = used: (no usages found)


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
