tests/cli/snapshots/cli__check__subcommand_unresolved.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unresolved
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "variable key"  [unresolved-key]
  --> ./src/app.tsx:4:18
  |
4 |     return <div>{t(keyName)}</div>;
  |                  ^


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
