tests/cli/snapshots/cli__check__subcommand_with_path_arg-2.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--path"
    - subdir
    - hardcoded
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
