tests/cli/snapshots/cli__check__subcommand_with_verbose_arg-2.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - "--verbose"
    - missing
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Messages directory './nonexistent' does not exist.
Hint: Check your .glotrc.json 'messagesDir' setting.
